kubernetes-monitoring/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-stub-deployment
  namespace: monitoring
  labels:
    app: nginx-stub-pod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-stub
  template:
    metadata:
      labels:
        app: nginx-stub
    spec:
      containers:
        - name: custom-nginx-stub
          image: nginx
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
            requests:
              cpu: "300m"
              memory: "128Mi"
          ports:
            - containerPort: 80
              name: nginx-web
          volumeMounts:
            - name: stub-cm
              mountPath: /etc/nginx/conf.d
              readOnly: true
        - name: nginx-reporter
          image: nginx/nginx-prometheus-exporter:latest
          args:
            - '--nginx.scrape-uri=http://localhost/nginx_status'
          resources:
            limits:
              memory: 128Mi
              cpu: 500m
          ports:
            - containerPort: 9113
              name: nginx-metrics
      volumes:
        - name: stub-cm
          configMap:
            defaultMode: 256
            name: nginx-stub-cm
            optional: false
---

apiVersion: v1
kind: Service
metadata:
  name: svc-stub
  namespace: monitoring
spec:
  type: ClusterIP
  selector:
    app: nginx-stub
  ports:
    - protocol: TCP
      port: 9113
      name: nginx-metrics
