kubernetes-monitoring/prometheus.yaml

apiVersion: v1
kind: Service
metadata:
  name: prometheus-main
spec:
  type: ClusterIP
  ports:
  - name: web
    port: 9090
    protocol: TCP
    targetPort: web
  selector:
    prometheus: main
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homework-ingress-stub
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: '/$2'
spec:
  ingressClassName: nginx
  rules:
  - host: "homework.otus"
    http:
      paths:
      - path: /prometheus
        pathType: Prefix
        backend:
          service:
            name: prometheus-main
            port:
              number: 9090
